# western-blot-mcp

./: .mcpbignore  CLAUDE.md  INSTALL.md  README.md  analyzer.py  manifest.json  prompts.py  pyproject.toml  schema.py  server.py
tests/: test_analyzer.py  test_integration.py  test_prompts.py  test_schema.py  test_server.py
