[project]
name = "western-blot-mcp"
version = "0.1.0"
description = "MCP server for AI-powered western blot image interpretation"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "litellm>=1.50.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.30.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
